--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:grantUriPermissions="true">
 
             <meta-data
-                android:name="android.support.FILE_PROVIDER_PATH"
+                android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/files" />
         </provider>
 
