Enable data binding in Gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ android {
             arg("room.schemeLocation", "$projectDir/schemas".toString())
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
